Add simple test for Gumtree matcher with corresponding data